# xhs-info-crawl

./: .env.example  .gitignore  AGENTS.md  INSTALL.md  Makefile  README.md  RELEASE_NOTES.md  SPEC.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/migrations/: env.py  script.py.mako
backend/scripts/: backfill_note_id_published_at.py  cleanup_activity_dates.py  reprocess_note.py
backend/tests/: conftest.py  test_activities_api.py  test_activity_cleanup.py  test_activity_status_removal.py  test_activity_validator.py  test_activity_window.py  test_adapter_popen_register.py  test_auth_api.py  test_blogger_batch_import.py  test_blogger_enricher.py  test_blogger_notes_signed_url.py  test_browser_launcher.py  test_celery_config.py  test_config.py  test_config_task_duplicate_api.py  test_crawl_auto_stop_previous.py  test_crawl_execution_ownership.py  test_crawl_scope.py  test_crawl_scope_with_groups.py  test_crawl_task_city_validation.py  test_crawl_task_resilience.py  test_database.py  test_dedupe_cities_script.py  test_e2e_workflow.py  test_fix_activity_city_code.py  test_health.py  test_keyword_group_api.py  test_keyword_group_models.py  test_local_storage.py  test_minimax.py  test_models_and_maintenance.py  test_multi_activity_archive.py  test_note_dedup.py  test_note_id_published_at.py  test_note_identity.py  test_note_summary.py  test_note_weekly_reports.py  test_notes_api.py  test_opencli_and_dedup_integration.py  test_opencli_execution_fence.py  (+17 more)
docs/: README.md  TODO.md  (+16 more)
(+233 files in other folders)
