[project]
name = "xhs-info-crawl-backend"
version = "0.1.0"
description = "Local-first backend for the XHS activity crawler"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "celery>=5.4,<6",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
